--- a/app/src/main/res/layout/fragment_fragmento_red.xml
+++ b/app/src/main/res/layout/fragment_fragmento_red.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlue"
-    tools:context=".FragmentoAzul">
+    android:background="@color/colorRed"
+    tools:context=".FragmentoRed">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fragmento Azul"
+        android:text="@string/hello_blank_fragment"
         android:background="@color/colorWhite"/>
 
 </FrameLayout>
