--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorRed">#FF0000</color>
-    <color name="colorBlue">#0000FF</color>
+    <color name="colorRed">#8B0000</color>
+    <color name="colorBlue">#000080</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
