--- a/app/src/main/res/layout/fragment_fragmento_red.xml
+++ b/app/src/main/res/layout/fragment_fragmento_red.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
+        android:text="Fragmento Vermelho"
         android:background="@color/colorWhite"/>
 
 </FrameLayout>
