--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <fragment
             android:id="@+id/fragAzul"
             android:name="com.example.ruan.androiddesign.FragmentoAzul"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout="@layout/fragment_fragmento_azul">
+            tools:layout="@layout/fragment_fragmento_azul"
+            android:layout_weight="2">
 
         </fragment>
 
@@ -35,7 +36,8 @@
             android:name="com.example.ruan.androiddesign.FragmentoRed"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout="@layout/fragment_fragmento_red">
+            tools:layout="@layout/fragment_fragmento_red"
+            android:layout_weight="1">
 
         </fragment>
 
