--- a/app/src/main/res/layout/fragment_fragmento_red.xml
+++ b/app/src/main/res/layout/fragment_fragmento_red.xml
@@ -13,4 +13,8 @@
         android:text="Fragmento Vermelho"
         android:background="@color/colorWhite"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </FrameLayout>
