--- a/app/src/main/res/layout/fragment_fragmento_red.xml
+++ b/app/src/main/res/layout/fragment_fragmento_red.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorRed"
+    android:orientation="vertical"
     tools:context=".FragmentoRed">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,7 +15,9 @@
         android:background="@color/colorWhite"/>
 
     <Button
+        android:id="@+id/btnFrag"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Botão"/>
 
 </FrameLayout>
