--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,25 +21,37 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <fragment
-            android:id="@+id/fragAzul"
-            android:name="com.example.ruan.androiddesign.FragmentoAzul"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout="@layout/fragment_fragmento_azul"
-            android:layout_weight="2">
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Botão 1"/>
 
-        </fragment>
+        <Button
+            android:id="@+id/btn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Botão 2"/>
 
-        <fragment
-            android:id="@+id/fragVermelho"
-            android:name="com.example.ruan.androiddesign.FragmentoRed"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout="@layout/fragment_fragmento_red"
-            android:layout_weight="1">
+        <!--<fragment-->
+            <!--android:id="@+id/fragAzul"-->
+            <!--android:name="com.example.ruan.androiddesign.FragmentoAzul"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--tools:layout="@layout/fragment_fragmento_azul"-->
+            <!--android:layout_weight="2">-->
 
-        </fragment>
+        <!--</fragment>-->
+
+        <!--<fragment-->
+            <!--android:id="@+id/fragVermelho"-->
+            <!--android:name="com.example.ruan.androiddesign.FragmentoRed"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--tools:layout="@layout/fragment_fragmento_red"-->
+            <!--android:layout_weight="1">-->
+
+        <!--</fragment>-->
 
     </LinearLayout>
 
