--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorRed">#8B0000</color>
     <color name="colorBlue">#000080</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGreen">#006400</color>
 </resources>
