--- a/app/src/main/res/layout/fragment_fragmento_verde.xml
+++ b/app/src/main/res/layout/fragment_fragmento_verde.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FF00"
+    android:background="@color/colorGreen"
     tools:context=".FragmentoVerde">
 
     <!-- TODO: Update blank fragment layout -->
